# personal-power-ctrl

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  flake.nix
nix/: pkg.nix  shell.nix
src/: async_util.rs  identity.rs  log.rs  main.rs  settings.rs  sink.rs  source.rs  state.rs
src/sink/: hs100.rs  kodi_rpc_cec.rs  simple_post_api.rs  snmpv2.rs
src/source/: kodi.rs  steamlink.rs
